--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@parcelaexpress/checkout-component-js",
   "version": "1.0.0",
   "main": "src/index.js",
+  "description": "Parcela Checkout Component",
   "module": "src/index.js",
   "repository": "https://github.com/Parcela-Express/checkout-component-js.git",
+  "homepage": "https://github.com/Parcela-Express/checkout-component-js#readme",
   "author": "Parcela Express <contato@parcelaexpress.com.br>",
   "license": "MIT",
   "scripts": {
@@ -17,6 +19,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
